namespace go llm.domain.common

typedef string Scenario (ts.enum="true")
const Scenario scenario_default = "default"
const Scenario scenario_evaluator = "evaluator"
